# dmy-solutions

./: .gitignore  CMakeLists.txt  LICENSE  template.cpp
.zed/: debug.json
bs.daimayuan.top/R1/: 1.cpp  1.in  2.cpp  2.in  3.cpp  4.0.cpp  4.1.cpp  4.3.cpp  4.4.cpp  4.cpp  4.in  5.cpp  5.in  6.cpp
bs.daimayuan.top/R10/: 55.cpp  56.cpp  57.cpp  59.cpp  59.in
bs.daimayuan.top/R11/: 61.cpp  61.in  62.cpp  63.cpp  63.in  66.cpp
bs.daimayuan.top/R12/: 67.cpp  68.cpp  69.cpp  70.cpp  71 2.cpp  71.3.cpp  71.cpp  71.gemini.cpp  71.in  71.org.cpp
bs.daimayuan.top/R2/: 7.in  (+6 more)
ffxy/: 1411.2.cpp  1411.cpp  2084.cpp  720.cpp  720.in  930.cpp  985.cpp  985.in  calculator.in
htoj.com.cn/: P7058.cpp  P7250.cpp  P7251.cpp  P7267.cpp  P7358.card_game.cpp  P7358.cpp  P7358.in  P7585.cpp  P7585.in  P7987.cpp  P8325.cpp  P8796.cpp  P8797.cpp  P9455.cpp  P9455.in  P9486.cpp  P9486.in
include/: combination.cpp  combination_mod.hpp  common.hpp  generate_combinations.cpp  generate_permutations.cpp  hp_math.hpp  permutation.cpp  sqrt.hpp
luogu.com.cn/: B2139.cpp  B2143.cpp  B2143.in  B3625.cpp  B3625.in  B3948 copy.cpp  B3948.cpp  B4359.cpp  B4359.in  P10109.cpp  P10109.in  P10376.cpp  P10376.in  P10376.memsearch.cpp  P10475.1.cpp  P10475.cpp  P10475.in  P1057.cpp  P1060.cpp  P11377.cpp  P1296.cpp  P1296.in  P13015.cpp  P13015.in  P1434.cpp  P1507.cpp  P2347.01.cpp  P2347.bg.cpp  P2347.cpp  P2347.in  P2347.mb.cpp  P2356.cpp  P2440.cpp  P3184.cpp  P9045.cpp  U597044.cpp
sample/: stl_string.cpp
test/: factorize_cached_test.cpp  factorize_test.cpp  gcd_test.cpp  get_factors_test.cpp
(+181 files in other folders)
